patches/bug22
Bottom: 9db535f50c6789b999ef6f837b5a0db5c9291c84
Top:    d480c80cd42e4ad0f03a6712a777c7923bd433ed
Author: scott snyder <sss@karma>
Date:   2023-02-12 12:29:11 -0500

hi -

cppcheck... gives an internal error from toLongNumber for this source:

{{{
bool initialize(bool flag, float x1, float x2) {
  if (flag) {   }

  if (x1>-998. and x2>-998.) {
    return false;
  }

  return true;
}
}}}


{{{
$  cppcheck  x.cc
Checking x.cc ...
x.cc:0:0: error: Internal Error. MathLib::toLongNumber: input was not completely consumed: -998.and [cppcheckError]

^
}}}
